gitops/apps/orders-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-api
  namespace: orders

spec:
  selector:
    app.kubernetes.io/name: orders-api

  ports:
    - name: http
      port: 80
      targetPort: http

  type: ClusterIP
