gitops/apps/orders-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: orders-api
  namespace: orders

spec:
  ingressClassName: traefik

  rules:
    - host: orders.localhost

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: orders-api
                port:
                  number: 80
